--- a/.github/workflows/add-tag.yml
+++ b/.github/workflows/add-tag.yml
@@ -22,7 +22,7 @@ jobs:
              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
              -H "X-GitHub-Api-Version: 2022-11-28" \
              ${{ github.api_url }}/repos/${{ github.repository }}/git/tags \
-             --data '{ "tag": "build.${{ env.BUILD_NUMBER }}, 
+             --data '{ "tag": "build.${{ env.BUILD_NUMBER }}", 
                       "message": "auto incremented build number", 
                       "object": "${{ github.sha }}", 
                       "type": "commit" }'
