--- a/.github/workflows/add-tag.yml
+++ b/.github/workflows/add-tag.yml
@@ -4,7 +4,7 @@ on: push
 
 env:
   CURL_OPTIONS: "--fail-with-body --location --show-error --silent"
-  BUILD_NUMBER: "1"
+  BUILD_NUMBER: "2"
 
 defaults:
   run:
@@ -14,7 +14,7 @@ jobs:
   add-build-number:
     runs-on: ubuntu-latest
     steps:
-      - name: add-tag
+      - name: create-tag-object
         run: |
              curl ${{ env.CURL_OPTIONS }} \
              -X POST \
@@ -23,6 +23,17 @@ jobs:
              -H "X-GitHub-Api-Version: 2022-11-28" \
              ${{ github.api_url }}/repos/${{ github.repository }}/git/tags \
              --data '{ "tag": "build.${{ env.BUILD_NUMBER }}", 
-                      "message": "auto incremented build number", 
-                      "object": "${{ github.sha }}", 
-                      "type": "commit" }'
+                       "message": "auto incremented build number", 
+                       "object": "${{ github.sha }}", 
+                       "type": "commit" }'
+
+      - name: create-reference
+        run: |
+             curl ${{ env.CURL_OPTIONS }} \
+             -X POST \
+             -H "Accept: application/vnd.github+json" \
+             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+             -H "X-GitHub-Api-Version: 2022-11-28" \
+             ${{ github.api_url }}/repos/${{ github.repository }}/git/refs \
+             --data '{ "ref": "refs/tags/build.${{ env.BUILD_NUMBER }}", 
+                       "sha": "${{ github.sha }}" }'
