--- a/.github/workflows/add-tag.yml
+++ b/.github/workflows/add-tag.yml
@@ -4,7 +4,7 @@ on: push
 
 env:
   CURL_OPTIONS: "--fail-with-body --location --show-error --silent"
-  BUILD_NUMBER: "2"
+  BUILD_NUMBER: "3"
 
 defaults:
   run:
@@ -14,6 +14,22 @@ jobs:
   add-build-number:
     runs-on: ubuntu-latest
     steps:
+      - name: enumerate-all-build-numbers
+        run: |
+             echo "BUILD_TAG=$(curl ${{ env.CURL_OPTIONS }} \
+             -X GET \
+             -H "Accept: application/vnd.github+json" \
+             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+             -H "X-GitHub-Api-Version: 2022-11-28" \
+             ${{ github.api_url }}/repos/${{ github.repository }}/git/matching-refs/tags/b \
+             | jq '.[].ref'
+             | sort
+             | tail -1 )" >> "$GITHUB_ENV"
+
+      - name: echo
+        run: |
+             echo ${{ env.BUILD_TAG }}
+
       - name: create-tag-object
         run: |
              curl ${{ env.CURL_OPTIONS }} \
