fix: line breaks.
Signed-off-by: tokcum <tobias.mucke@gmail.com>

--- a/.github/workflows/add-tag.yml
+++ b/.github/workflows/add-tag.yml
@@ -22,8 +22,8 @@ jobs:
              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
              -H "X-GitHub-Api-Version: 2022-11-28" \
              ${{ github.api_url }}/repos/${{ github.repository }}/git/matching-refs/tags/b \
-             | jq '.[].ref'
-             | sort
+             | jq '.[].ref' \
+             | sort \
              | tail -1 )" >> "$GITHUB_ENV"
 
       - name: echo
