--- a/.github/workflows/add-tag.yml
+++ b/.github/workflows/add-tag.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: enumerate-all-build-numbers
         run: |
-             echo "BUILD_TAG=$(curl ${{ env.CURL_OPTIONS }} \
+             echo "LAST_BUILD_NUMBER=$(curl ${{ env.CURL_OPTIONS }} \
              -X GET \
              -H "Accept: application/vnd.github+json" \
              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
@@ -24,11 +24,13 @@ jobs:
              ${{ github.api_url }}/repos/${{ github.repository }}/git/matching-refs/tags/b \
              | jq '.[].ref' \
              | sort \
-             | tail -1 )" >> "$GITHUB_ENV"
+             | tail -1 \
+             | rev \
+             | cut --delimiter="/" --only-delimited --fields 1 )" >> "$GITHUB_ENV"
 
       - name: echo
         run: |
-             echo ${{ env.BUILD_TAG }}
+             echo ${{ env.LAST_BUILD_NUMBER }}
 
       - name: create-tag-object
         run: |
@@ -38,7 +40,7 @@ jobs:
              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
              -H "X-GitHub-Api-Version: 2022-11-28" \
              ${{ github.api_url }}/repos/${{ github.repository }}/git/tags \
-             --data '{ "tag": "build.${{ env.BUILD_NUMBER }}", 
+             --data '{ "tag": "build/${{ env.BUILD_NUMBER }}", 
                        "message": "auto incremented build number", 
                        "object": "${{ github.sha }}", 
                        "type": "commit" }'
@@ -51,5 +53,5 @@ jobs:
              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
              -H "X-GitHub-Api-Version: 2022-11-28" \
              ${{ github.api_url }}/repos/${{ github.repository }}/git/refs \
-             --data '{ "ref": "refs/tags/build.${{ env.BUILD_NUMBER }}", 
+             --data '{ "ref": "refs/tags/build/${{ env.BUILD_NUMBER }}", 
                        "sha": "${{ github.sha }}" }'
