--- a/.github/workflows/add-tag.yml
+++ b/.github/workflows/add-tag.yml
@@ -4,7 +4,7 @@ on: push
 
 env:
   CURL_OPTIONS: "--fail-with-body --location --show-error --silent"
-  BUILD_NUMBER: "4"
+  BUILD_NUMBER: "1"
 
 defaults:
   run:
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: get-highest-build-number
         run: |
-             echo "LAST_BUILD_NUMBER=$(curl ${{ env.CURL_OPTIONS }} \
+             echo "BUILD_NUMBER=$(curl ${{ env.CURL_OPTIONS }} \
              -X GET \
              -H "Accept: application/vnd.github+json" \
              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
@@ -27,13 +27,14 @@ jobs:
              | sort --general-numeric-sort \
              | tail -1 )" >> "$GITHUB_ENV"
 
-      - name: echo
+      - name: check BUILD_NUMBER
         run: |
              INTEGER_REGEX='^[1-9][0-9]+$'
-             if [[ ${{ env.LAST_BUILD_NUMBER }} =~ $INTEGER_REGEX ]]; then
-               echo "::notice title=HIGHEST_BUILD_NUMBER::✅ HIGHEST_BUILD_NUMBER is int"
+             if [[ ${{ env.BUILD_NUMBER }} =~ $INTEGER_REGEX ]]; then
+               echo "::notice title=BUILD_NUMBER::✅ BUILD_NUMBER is int"
+               echo "BUILD_NUMBER=$((${{ env.BUILD_NUMBER }} + 1))" >> $GITHUB_ENV
              else
-               echo "::error title=HIGHEST_BUILD_NUMBER::❌ HIGHEST_BUILD_NUMBER not an int"
+               echo "::error title=BUILD_NUMBER::❌ BUILD_NUMBER not an int"
                exit 1
              fi
 
