--- a/.github/workflows/add-tag.yml
+++ b/.github/workflows/add-tag.yml
@@ -4,40 +4,19 @@ on: push
 
 env:
   CURL_OPTIONS: "--fail-with-body --location --show-error --silent"
-  BUILD_NUMBER: "1"
 
 defaults:
   run:
     shell: bash
 
 jobs:
+  call-workflow:
+    uses: polarlabs/.github/workflows/set-build-number.yml
+
   add-build-number:
     runs-on: ubuntu-latest
+
     steps:
-      - name: get BUILD_NUMBER
-        run: |
-             echo "BUILD_NUMBER=$(curl ${{ env.CURL_OPTIONS }} \
-             -X GET \
-             -H "Accept: application/vnd.github+json" \
-             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-             -H "X-GitHub-Api-Version: 2022-11-28" \
-             ${{ github.api_url }}/repos/${{ github.repository }}/git/matching-refs/tags/build/ \
-             | jq -r '.[].ref' \
-             | cut --delimiter="/" --only-delimited --fields 4 \
-             | sort --general-numeric-sort \
-             | tail -1 )" >> "$GITHUB_ENV"
-
-      - name: increment BUILD_NUMBER
-        run: |
-             INTEGER_REGEX='^[1-9][0-9]*$'
-             if [[ ${{ env.BUILD_NUMBER }} =~ $INTEGER_REGEX ]]; then
-               echo "::notice title=BUILD_NUMBER::✅ BUILD_NUMBER is int"
-               echo "BUILD_NUMBER=$((${{ env.BUILD_NUMBER }} + 1))" >> $GITHUB_ENV
-             else
-               echo "::error title=BUILD_NUMBER::❌ BUILD_NUMBER not an int"
-               exit 1
-             fi
-
       - name: create tag object
         run: |
              curl ${{ env.CURL_OPTIONS }} \
