--- a/.github/workflows/add-tag.yml
+++ b/.github/workflows/add-tag.yml
@@ -11,7 +11,7 @@ defaults:
 
 jobs:
   call-workflow:
-    uses: polarlabs/.github/workflows/set-build-number.yml@main
+    uses: polarlabs/factory/workflows/set-build-number.yml@main
 
   add-build-number:
     runs-on: ubuntu-latest
