fix: output name.
Signed-off-by: tokcum <tobias.mucke@gmail.com>

--- a/.github/workflows/add-tag.yml
+++ b/.github/workflows/add-tag.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - name: create tag object
         env:
-          BUILD_NUMBER: ${{ needs.set-build-number.outputs.build_number }}
+          BUILD_NUMBER: ${{ needs.set-build-number.outputs.BUILD_NUMBER }}
         run: |
              curl ${{ env.CURL_OPTIONS }} \
              -X POST \
