--- a/.github/workflows/add-tag.yml
+++ b/.github/workflows/add-tag.yml
@@ -10,38 +10,5 @@ defaults:
     shell: bash
 
 jobs:
-  get-next-build:
-    uses: polarlabs/factory/.github/workflows/get-next-build.yml@main
-
-  add-build-tag:
-    runs-on: ubuntu-latest
-    needs: [get-next-build]
-
-    steps:
-      - name: create tag object
-        env:
-          BUILD_TAG: ${{ needs.get-next-build.outputs.BUILD_TAG }}
-        run: |
-             curl ${{ env.CURL_OPTIONS }} \
-             -X POST \
-             -H "Accept: application/vnd.github+json" \
-             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-             -H "X-GitHub-Api-Version: 2022-11-28" \
-             ${{ github.api_url }}/repos/${{ github.repository }}/git/tags \
-             --data '{ "tag": "${{ env.BUILD_TAG }}", 
-                       "message": "auto incremented build number",  
-                       "object": "${{ github.sha }}", 
-                       "type": "commit" }'
-
-      - name: create ref
-        env:
-          BUILD_TAG: ${{ needs.get-next-build.outputs.BUILD_TAG }}
-        run: |
-             curl ${{ env.CURL_OPTIONS }} \
-             -X POST \
-             -H "Accept: application/vnd.github+json" \
-             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-             -H "X-GitHub-Api-Version: 2022-11-28" \
-             ${{ github.api_url }}/repos/${{ github.repository }}/git/refs \
-             --data '{ "ref": "refs/tags/${{ env.BUILD_TAG }}", 
-                       "sha": "${{ github.sha }}" }'
+  tag-ref-as-build:
+    uses: polarlabs/factory/.github/workflows/tag-ref-as-build.yml@feat/tag-build
