test: use workflows from ref v/1.0.0.
Signed-off-by: tokcum <tobias.mucke@gmail.com>

--- a/.github/workflows/add-tag.yml
+++ b/.github/workflows/add-tag.yml
@@ -11,4 +11,4 @@ defaults:
 
 jobs:
   tag-ref-as-build:
-    uses: polarlabs/factory/.github/workflows/tag-ref-as-build.yml@rel/1.0.0
+    uses: polarlabs/factory/.github/workflows/tag-ref-as-build.yml@v/1.0.0
