--- a/.github/workflows/create-version.yml
+++ b/.github/workflows/create-version.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   echo:
-    - run
-        |
-        echo "Triggered"
+    steps:
+      - name: Echo
+        run: |
+             echo "Triggered"
