mod: echo ref name.
Signed-off-by: tokcum <tobias.mucke@gmail.com>

--- a/.github/workflows/create-version.yml
+++ b/.github/workflows/create-version.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
       - name: Echo
         run: |
-             echo "Triggered"
+             echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
