fix: output of vars.
Signed-off-by: tokcum <tobias.mucke@gmail.com>

--- a/.github/workflows/create-version.yml
+++ b/.github/workflows/create-version.yml
@@ -7,6 +7,9 @@ on:
     tags:
       - v/*.*.*
 
+env:
+  VERSION_STRING: "0.0.0"
+
 defaults:
   run:
     shell: bash
@@ -18,19 +21,24 @@ jobs:
   set-version-string:
     runs-on: ubuntu-latest
 
+    outputs:
+      VERSION_STRING: ${{ steps.set-version-string.outputs.VERSION_STRING }}
+
     steps:
-      - name: Set env
+      - name: Set version string
+        id: set-version-string
         run: |
-             echo "VERSION_STRING=${GITHUB_REF_NAME}" >> $GITHUB_ENV
+             echo "VERSION_STRING=${GITHUB_REF_NAME}" >> $GITHUB_OUTPUT
 
   echo-env-vars:
     runs-on: ubuntu-latest
+    needs: [tag-ref-as-build, set-version-string]
 
     steps:
       - name: Echo Version string
         run: |
-          echo "Version: $VERSION_STRING"
+          echo "Version: ${{ needs.set-version-string.outputs.VERSION_STRING }}"
 
       - name: Echo Build number
         run: |
-          echo "Build: $BUILD_NUMBER"
+          echo "Build: ${{ needs.tag-ref-as-build.outputs.BUILD_NUMBER }}"
