--- a/.github/workflows/create-build.yml
+++ b/.github/workflows/create-build.yml
@@ -25,6 +25,9 @@ jobs:
     steps:
       - name: Echo BUILD_NUMBER and BUILD_TAG
         id: return-build
+        env:
+          BUILD_NUMBER: ${{ needs.tag-ref-as-build.outputs.BUILD_NUMBER }}
+          BUILD_TAG: ${{ needs.tag-ref-as-build.outputs.BUILD_TAG }}
         run: |
           echo "${{ env.BUILD_NUMBER }}"
           echo "${{ env.BUILD_TAG }}"
